fix: fixed logo and alignment issue
Converted logo asset link to point to site url

--- a/docs/assets/css/extra.css
+++ b/docs/assets/css/extra.css
@@ -300,6 +300,8 @@ header .md-search__input {
 .site-footer{
   color: dodgerblue;
   font-size: 1em !important;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
